--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<script>
-<!--
-document.write(unescape("%3Ciframe%20src%3D%22https%3A//www.simbiotica.tk/portafolio/%22%3E%3C/iframe%3E"));
-//-->
-</script>
-<style>
-body {
-    margin: 0;            /* Reset default margin */
-}
-iframe {
-    display: block;       /* iframes are inline by default */
-    background: #000;
-    border: none;         /* Reset default border */
-    height: 100vh;        /* Viewport-relative units */
-    width: 100vw;
-}
-</style>
+hola
